# zencodec

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.crates.md  README.md  TRAIT-DESIGN.md  downstream.md  justfile  spec.md
.github/workflows/: ci.yml
apidoc/: Cargo.toml
benches/: exif_filter.rs
benchmarks/: exif_filter_2026-05-29.txt
benchmarks/gainmap-fidelity/: calibration-table-2026-06-25.tsv  diagnostic-battery-2026-06-25.tsv  highroom-control-2026-06-25.tsv  results-2026-06-25.tsv
docs/: CONSUMING.md  DESIGN.md  IMPLEMENTING.md  codec-integration-2026-06-08.md  color-emit-model.md  correctness-model.md  cross-codec-color-metadata.md  error-taxonomy-inventory.md  error-types-ecosystem.md  gainmap-fidelity-rd-2026-06.md  gainmap-pipeline-scope-2026-06-08.md  near-lossless-design.md  pixel-descriptor-negotiation.md  spec.md  streaming.md  yagni.md
docs/public-api/: ABLATION-zencodec.md  zencodec-testkit.features.txt  zencodec-testkit.internal.txt  zencodec-testkit.txt  zencodec.features.txt  zencodec.internal.txt  zencodec.txt
examples/: audit_magic.rs  dbg_author.rs  dbg_exif.rs  dbg_filt.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: exif_author.rs  exif_filter.rs  exif_parse.rs  exif_roundtrip.rs  metadata_filtered.rs
fuzz/regression/: crash-idempotence-10a1002a  exif_author_fixpoint_96  exif_author_issue_113_farm_artifact  exif_roundtrip_dup_interop_pointer  exif_roundtrip_gps_drift_30  exif_roundtrip_gps_drift_dup_unresolved_pointer  exif_roundtrip_issue_114_farm_artifact  exif_roundtrip_issue_115_farm_artifact  metadata_filtered_idempotent_97  metadata_filtered_issue_111_farm_artifact  metadata_filtered_orientation_entry_overlap  metadata_filtered_orientation_header_overlap
src/: buffer.rs  capabilities.rs  color.rs  convert.rs  cost.rs  detect.rs  error.rs  estimate.rs  exif.rs  extensions.rs  fidelity.rs  format.rs  gainmap.rs  helpers.rs  icc.rs  info.rs  lib.rs  limits.rs  metadata.rs  metric.rs  negotiate.rs  orientation.rs  output.rs  pixel.rs  pixel_format.rs  policy.rs  set.rs  sink.rs  traits.rs
src/format/: builtins.rs  mod.rs
src/helpers/: exif.rs  icc.rs  mod.rs
src/traits/: decoder.rs  decoding.rs  dyn_decoding.rs  dyn_encoding.rs  encoder.rs  encoding.rs  mod.rs  unsupported.rs
tests/: comprehensive.rs  exif_differential.rs  fuzz_regression.rs  pnm_roundtrip.rs  public_api_doc.rs
tests-dev/: public_api_doc.rs
tests/mock_anim/: mod.rs
tests/pnm/: mod.rs
zencodec-helpers/: Cargo.toml  README.md
zencodec-helpers/src/: lib.rs  topk_verify.rs
zencodec-helpers/src/loop_steps/: feature_prep.rs  grammars.rs  mod.rs  omni_merge.rs  origin_split.rs  parse_config.rs  topk_eval.rs  variant.rs
zencodec-helpers/tests/: topk_verify_real_bake.rs
zencodec-testkit/: Cargo.toml  README.md
zencodec-testkit/src/: fixtures.rs  lib.rs  minimal.rs  reference.rs
zencodec-testkit/tests/: codec_set.rs  decode_parallelism.rs  usage.rs
