[package]
name = "zencodec-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0 OR MIT"
description = "Shared traits and types for zen* image codecs"
categories = ["multimedia::images"]
keywords = ["image", "codec", "traits"]
repository = "https://github.com/imazen/zencodec-types"
exclude = ["CLAUDE.md", "CLEANUP_PLAN.md", "TODOS.md", "TRAIT-DESIGN.md", "io-ideas.md", "streaming.md", "thoughts.md"]

[dependencies]
zenpixels = { version = "0.1", path = "../zenpixels/zenpixels", features = ["buffer"] }
zenpixels-convert = { version = "0.1", path = "../zenpixels/zenpixels-convert", features = ["buffer"] }
bytemuck = { version = "1.25", default-features = false, features = ["extern_crate_alloc", "derive"] }
enough = "0.4"
rgb = { version = "0.8", default-features = false, features = ["bytemuck"] }
imgref = "1.12"
whereat = { version = "0.1", default-features = false }
